soft delete p1